--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
 # created by virtualenv automatically
+# Virtual environment directories
+/Lib/
+/Scripts/
+/bin/
+/Include/
+/lib/
+/lib64/
+/local/
+/share/
+
+# Python specific
+*.pyc
+__pycache__/
+*.pyo
+*.pyd
